Vehicle search option is modified.

--- a/app/src/main/res/layout/activity_available_vehicle_list.xml
+++ b/app/src/main/res/layout/activity_available_vehicle_list.xml
@@ -12,6 +12,7 @@
         android:divider="#5A4680"
         android:dividerHeight="4dp"
         android:id="@+id/availableVehicleListId"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
