--- a/app/src/main/res/layout/activity_search_availability.xml
+++ b/app/src/main/res/layout/activity_search_availability.xml
@@ -22,6 +22,37 @@
 
         >
 
+        <AutoCompleteTextView
+            android:id="@+id/pickupID"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="   Pickup "
+            android:drawableLeft="@drawable/source"
+            android:layout_marginBottom="30dp"
+            android:textIsSelectable="true"
+            />
+
+        <AutoCompleteTextView
+            android:id="@+id/destinatioID"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:hint="   Destination"
+            android:drawableLeft="@drawable/destination"
+            android:layout_marginBottom="30dp"
+            />
+
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="80dp"
+            android:hint="        product description"
+            android:background="@drawable/signinpuntstyle"
+            android:textIsSelectable="true"
+            android:layout_marginBottom="20dp"
+            />
+
+
+
+        <!--
         <TextView
 
             android:layout_width="wrap_content"
@@ -64,6 +95,7 @@
             android:textColor="#000000"
             android:text="Please select" />
 
+        -->
 
         <LinearLayout
             android:layout_width="wrap_content"
