--- a/app/src/main/res/layout/custom_layout_for_search_vehicle.xml
+++ b/app/src/main/res/layout/custom_layout_for_search_vehicle.xml
@@ -25,15 +25,13 @@
             />
 
         <TextView
-            android:gravity="center"
             android:id="@+id/tripCostId"
-            android:text="Trip Cost"
-            android:textStyle="bold"
-            android:textColor="#EE3B5F"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            />
+            android:gravity="center"
+            android:textColor="#EE3B5F"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
