--- a/app/src/main/res/layout/activity_owner_home.xml
+++ b/app/src/main/res/layout/activity_owner_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgsignin"
+    android:background="#1B364B  "
     android:weightSum="10"
     android:orientation="vertical"
     tools:context=".UserHomeInterface">
@@ -13,9 +13,9 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:layout_weight="3"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
 
         <android.support.v7.widget.CardView
@@ -128,10 +128,10 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:gravity="center"
-        android:weightSum="2"
         android:orientation="horizontal"
+        android:weightSum="2"
 
         >
 
@@ -143,8 +143,7 @@
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            >
+            android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -243,7 +242,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#aaa114d4"
+        android:background="#1B364B  "
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:layout_marginBottom="10dp"
@@ -253,12 +252,14 @@
             android:id="@+id/paymentId"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-
+            android:background="#1B364B  "
             android:layout_weight="1"
             android:clickable="true"
+
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/bgcolor"
@@ -295,6 +296,11 @@
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.9"
+        ></LinearLayout>
 
 
 
