--- a/app/src/main/res/layout/activity_search_availability.xml
+++ b/app/src/main/res/layout/activity_search_availability.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:weightSum="10"
-    android:background="#b0c4be"
+    android:background="#1B364B  "
 
     tools:context=".SearchAvailability">
 
@@ -15,136 +15,133 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_weight="10"
         android:gravity="center"
         android:weightSum="2"
         android:orientation="vertical"
 
         >
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#94CAE6"
+            android:text="Pick Up "
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+
+
         <AutoCompleteTextView
             android:id="@+id/pickupID"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="   Pickup "
+            android:layout_width="match_parent"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:layout_height="40dp"
+            android:hint="      Search "
             android:drawableLeft="@drawable/source"
             android:layout_marginBottom="30dp"
+            android:background="#ffffff"
             android:textIsSelectable="true"
             />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#94CAE6"
+            android:text="Unload "
+            android:textAlignment="center"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
         <AutoCompleteTextView
             android:id="@+id/destinatioID"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="   Destination"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:layout_height="40dp"
+            android:hint="      Search"
             android:drawableLeft="@drawable/destination"
+            android:background="#ffffff"
             android:layout_marginBottom="30dp"
             />
 
         <EditText
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             android:layout_height="80dp"
             android:hint="        product description"
-            android:background="@drawable/signinpuntstyle"
+            android:background="#ffffff"
             android:textIsSelectable="true"
             android:layout_marginBottom="20dp"
-            />
-
-
-
-        <!--
-        <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pick up location"
-
-            android:textSize="30dp"
-            android:textColor="@color/colorAccent"
-            />
-
-        <Button
-            android:id="@+id/pickUpLocaionId"
-            style="@style/AlertDialog.AppCompat"
-            android:layout_width="154dp"
-            android:layout_height="43dp"
-            android:layout_marginBottom="20dp"
-
-            android:clickable="true"
-            android:text="Please select"
-            android:textColor="#000000"
-            />
-
-        <TextView
-            android:textSize="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Destination"
-            android:textColor="@color/colorAccent"
 
             />
 
-        <Button
-            android:id="@+id/destinationId"
-            style="@style/AlertDialog.AppCompat"
-            android:layout_width="158dp"
-            android:layout_height="45dp"
-            android:layout_marginBottom="20dp"
 
-            android:clickable="true"
-            android:textColor="#000000"
-            android:text="Please select" />
 
-        -->
+
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:orientation="horizontal"
-
+            android:layout_marginRight="60dp"
+            android:layout_marginLeft="60dp"
+            android:weightSum="2"
             >
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:layout_height="match_parent">
 
 
 
                 <TextView
-                    android:textColor="@color/colorAccent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="#94CAE6"
+                    android:gravity="center"
+
                     android:text="Time"
                     android:textSize="30dp"
                     />
                 <Button
                     android:id="@+id/selectTimeId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
                     android:text="please select"
+                    android:background="#ffffff"
                     />
 
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent">
 
                 <TextView
-                    android:textColor="@color/colorAccent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:text="Date"
-
+                    android:background="#94CAE6"
                     android:textSize="30dp"
                     />
                 <Button
                     android:id="@+id/selectDateId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
                     android:text="please select"
+                    android:background="#ffffff"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -153,8 +150,8 @@
         <Button
             android:id="@+id/searchVehicleButtonId"
             android:layout_width="256dp"
-            android:layout_height="37dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/signupxml"
             android:text="Search Truck"
             android:textColor="#ffffff"
@@ -162,22 +159,5 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#ffffff"
-        android:gravity="bottom">
-
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-
-            app:menu="@menu/navigation"/>
-
-    </LinearLayout>
 
 </LinearLayout>
