--- a/app/src/main/res/layout/activity_trip_confirmation.xml
+++ b/app/src/main/res/layout/activity_trip_confirmation.xml
@@ -24,7 +24,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_marginBottom="20dp"
-
+            android:background="#94CAE6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirmation Successful"
