--- a/app/src/main/res/layout/activity_user_home_interface.xml
+++ b/app/src/main/res/layout/activity_user_home_interface.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgsignin"
+    android:background="#1B364B  "
     android:weightSum="9"
     android:orientation="vertical"
     tools:context=".UserHomeInterface">
