--- a/app/src/main/res/layout/activity_available_vehicle_list.xml
+++ b/app/src/main/res/layout/activity_available_vehicle_list.xml
@@ -4,13 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AvailableVehicleList">
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/buttonhapse"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="Select Vehicles"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="#FFFFFF"
+        />
+
 
     <ListView
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:divider="#5A4680"
-        android:dividerHeight="4dp"
+        android:divider="@drawable/map_button"
+        android:dividerHeight="10dp"
         android:id="@+id/availableVehicleListId"
         android:clickable="true"
         android:layout_width="match_parent"
