--- a/app/src/main/res/layout/activity_owner_home.xml
+++ b/app/src/main/res/layout/activity_owner_home.xml
@@ -25,6 +25,7 @@
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
+            app:cardCornerRadius="30dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:padding="20dp">
 
@@ -48,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c1"
+                    android:background="#2196F3"
 
                     ></View>
 
@@ -78,6 +79,7 @@
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
+            app:cardCornerRadius="30dp"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
@@ -100,7 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c2"
+                    android:background="#2196F3"
 
                     ></View>
 
@@ -143,6 +145,7 @@
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
+            app:cardCornerRadius="30dp"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
@@ -165,7 +168,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c1"
+                    android:background="#2196F3"
 
                     ></View>
 
@@ -194,6 +197,7 @@
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
+            app:cardCornerRadius="30dp"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
@@ -216,7 +220,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c2"
+                    android:background="#2196F3"
 
                     ></View>
 
@@ -238,6 +242,13 @@
 
     </LinearLayout>
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        ></LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -255,15 +266,16 @@
             android:background="#1B364B  "
             android:layout_weight="1"
             android:clickable="true"
-
+            app:cardCornerRadius="20dp"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/bgcolor"
-                android:paddingLeft="40dp"
+                android:background="@drawable/buttonhapse"
+                android:paddingLeft="35dp"
+
                 android:orientation="horizontal">
 
                 <ImageView
@@ -281,11 +293,12 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="15dp"
+                    android:paddingLeft="10dp"
                     android:layout_margin="5dp"
                     android:text="Payment"
+                    android:paddingTop="10dp"
                     android:textAppearance="?android:textAppearanceLarge"
-                    android:textSize="20dp"
+                    android:textSize="30dp"
                     android:textStyle="bold"
 
                     />
@@ -299,7 +312,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.9"
+        android:layout_weight=".9"
         ></LinearLayout>
 
 
@@ -312,7 +325,7 @@
         android:gravity="bottom">
 
         <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/navigationid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
