--- a/app/src/main/res/drawable/map_button.xml
+++ b/app/src/main/res/drawable/map_button.xml
@@ -6,9 +6,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#47A891"
-        android:startColor="#E8E8E8"
-        android:endColor="#105047"
+        android:centerColor="#42B4B4"
+        android:startColor="#CFF7F0"
+        android:endColor="#84B9AA"
         android:type="linear"
         />
     <padding
