--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgsignin"
+    android:background="#1D1D2C"
 
     tools:context=".MainActivity">
 
@@ -17,45 +17,70 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/emailId"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/signinpuntstyle"
-            android:gravity="center"
-            android:hint="Email"
-            android:inputType="text"
-            android:padding="10dp"
-            android:textColorHint="#082b30"
-            android:textSize="30dp"
-            android:drawableLeft="@drawable/email_black_24dp"
-            android:textStyle="italic" />
+            android:layout_height="100dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/delivery_truck" />
 
-        <EditText
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:background="@drawable/signinpuntstyle"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:id="@+id/passwordid"
+            android:background="#9DC5E2">
+            >
+
+            <EditText
+                android:id="@+id/emailId"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:background="@drawable/signinpuntstyle"
+                android:gravity="center"
+                android:hint="Email"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textColorHint="#082b30"
+                android:textSize="30dp"
+                android:drawableLeft="@drawable/email_black_24dp"
+                android:textColor="#ff22"
+                />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="password"
-            android:padding="10dp"
-            android:inputType="textPassword"
-            android:textColorHint="#082b30"
-            android:textSize="30dp"
-            android:drawableLeft="@drawable/key_black_24dp"
-            android:textStyle="italic" />
+            android:layout_height="60dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="#9DC5E2">
+
+            <EditText
+
+                android:gravity="center"
+                android:background="@drawable/signinpuntstyle"
+                android:id="@+id/passwordid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Password"
+                android:padding="10dp"
+                android:inputType="textPassword"
+                android:textColorHint="#082b30"
+                android:textSize="30dp"
+                android:drawableLeft="@drawable/key_black_24dp"
+                />
+        </LinearLayout>
+
 
         <Spinner
 
             android:id="@+id/userSelectionSignInId"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_width="130dp"
-            android:background="@drawable/signupinputstyle"
+            android:background="@drawable/buttonhapse"
             android:layout_height="40dp">
 
         </Spinner>
