--- a/app/src/main/res/layout/activity_manage_driver.xml
+++ b/app/src/main/res/layout/activity_manage_driver.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgsignin"
     android:weightSum="10"
     android:orientation="vertical"
+    android:background="#383863"
     tools:context=".UserHomeInterface">
 
     <LinearLayout
@@ -22,11 +22,12 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/addDriverId"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="1dp"
+            android:layout_height="203dp"
             android:layout_margin="20dp"
             android:layout_weight="1"
             android:clickable="true"
+            app:cardCornerRadius="30dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:padding="20dp">
 
@@ -50,7 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c1"
+                    android:background="#1E534E"
 
                     ></View>
 
@@ -75,10 +76,12 @@
         <!--   second card view        -->
         <android.support.v7.widget.CardView
             android:id="@+id/removeDriverId"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="2dp"
+            android:layout_height="198dp"
             android:layout_margin="20dp"
             android:layout_weight="1"
+            app:cardCornerRadius="30dp"
+
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground">
 
@@ -102,11 +105,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/c2"
+                    android:background="#236972"
 
                     ></View>
 
                 <TextView
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
