--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
         android:inputType="text"
         android:padding="10dp"
         android:textColor="#000"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textIsSelectable="true"
         android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
         android:hint="Mobile no."
         android:inputType="text"
         android:padding="10dp"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textStyle="bold" />
 
     <EditText
@@ -63,7 +63,7 @@
         android:hint="Email"
         android:inputType="text"
         android:padding="10dp"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textStyle="bold" />
 
     <EditText
@@ -77,7 +77,7 @@
         android:hint="NID"
         android:inputType="text"
         android:padding="10dp"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textStyle="bold" />
 
     <EditText
@@ -91,7 +91,7 @@
         android:hint="password"
         android:inputType="textPassword"
         android:padding="10dp"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textStyle="bold" />
 
     <EditText
@@ -105,7 +105,7 @@
         android:hint="Retype password"
         android:inputType="textPassword"
         android:padding="10dp"
-        android:textColorHint="@color/c2"
+        android:textColorHint="#000000"
         android:textStyle="bold" />
 
 
@@ -138,8 +138,8 @@
             android:clickable="true"
             android:paddingRight="40dp"
             android:text="Owner"
-            android:textColor="@color/c2"
-            android:textColorHint="@color/c2"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -149,7 +149,8 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:text="Borrower"
-            android:textColor="@color/c2"
+            android:textColorHint="#000000"
+            android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
 
