--- a/app/src/main/res/layout/activity_trip_confirmation.xml
+++ b/app/src/main/res/layout/activity_trip_confirmation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="#1D1D2C"
+    android:background="#C7C9CE"
     tools:context=".TripConfirmation">
 
 
@@ -14,27 +14,56 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp"
         android:layout_width="300dp"
-        android:background="#FFFFFF"
-        android:layout_height="360dp">
+        android:background="@drawable/tripconfirmation_back"
+        android:layout_height="400dp">
+
+
+
 
         <TextView
-            android:textColor="#ff22"
+            android:textColor="#FDFCFC"
             android:textSize="30dp"
             android:textStyle="bold"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_marginBottom="20dp"
-            android:background="#94CAE6"
-            android:layout_width="wrap_content"
+            android:background="@drawable/buttonhapse"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirmation Successful"
+            android:text="Booking Successful"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             />
+
+        <TextView
+            android:textColor="#FF5722"
+            android:layout_marginLeft="20dp"
+
+            android:textSize="20dp"
+            android:id="@+id/tripID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trip Id:"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:textColor="#FF5722"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/NPid"
+            android:text="VN"
+            android:layout_marginLeft="20dp"
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            />
+
+
         <TextView
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
 
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:id="@+id/sourceID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,7 +73,7 @@
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
 
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:id="@+id/destID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +84,7 @@
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
 
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:id="@+id/dateID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,7 +94,7 @@
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
 
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:id="@+id/timeID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,7 +104,7 @@
             android:textColor="#000000"
             android:layout_marginLeft="20dp"
 
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:id="@+id/costID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,4 +113,18 @@
             />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/okConfirmID"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="OK"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:background="@drawable/buttonhapse"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="150dp"
+        />
 </LinearLayout>
